src/models/mixins/style.scss
@import 'colors';
@import 'popover';
@import 'skew';
@import 'checkbox';
@import 'slide-range';
@import 'select';
@import 'swiper';
@import 'scrollbar';

input {
	-webkit-appearance: none;
}

.blockquote {
	&:before,
	&:after {
		font-size: 120%;
		color: currentColor;
		display: inline-block;
	}
	&:before {
		content: '“';
		transform: translateX(-5px);
	}
	&:after {
		content: '”';
		transform: translate(5px, 50%);
	}
}

.revert-on-hover {
	&:hover {
		.revert-on-hover__item {
			&-footer {
				background-color: $blue-light;
			}
			&-header {
				background-color: $red;
			}
		}
	}
}

.triangle-to {
	&-right {
		width: 0;
		height: 0;
		border-top: 5px solid transparent;
		border-bottom: 5px solid transparent;
		border-left: 5px solid currentColor;
		&__big {
			border-top-width: 7px;
			border-bottom-width: 7px;
			border-left-width: 7px;
		}
	}
	&-bottom {
		width: 0;
		height: 0;
		border-left: 5px solid transparent;
		border-right: 5px solid transparent;
		border-top: 5px solid currentColor;
	}
}

.table-label {
	&__item {
		&:nth-child(1),
		&:nth-child(2),
		&:nth-child(3),
		&:nth-child(4),
		&:nth-child(5) {
			border-bottom: 1px solid $gray;
			border-right: 1px solid $gray;
		}
		&:nth-child(6) {
			border-bottom: 1px solid $gray;
		}
		&:nth-child(7),
		&:nth-child(8),
		&:nth-child(9),
		&:nth-child(10),
		&:nth-child(11) {
			border-right: 1px solid $gray;
		}
		@media (max-width: 1023px) {
			&:nth-child(4),
			&:nth-child(8) {
				border-right-color: transparent;
			}
			&:nth-child(6) {
				border-right: 1px solid $gray;
			}
			&:nth-child(7),
			&:nth-child(8) {
				border-bottom: 1px solid $gray;
			}
		}
		@media (max-width: 639px) {
			&:nth-child(3),
			&:nth-child(6),
			&:nth-child(9) {
				border-right-color: transparent;
			}
			&:nth-child(4),
			&:nth-child(8) {
				border-right-color: $gray;
			}
			&:nth-child(9) {
				border-bottom: 1px solid $gray;
			}
		}
	}
}

.line-height-min {
	line-height: 1.2;
}

.course-card-main {
	min-height: 330px;
	@media (max-width: 639px) {
		min-height: initial;
	}
}

@media (min-width: 1280px) {
	.xl_text-titlemin {
		font-size: 2.5rem;
		line-height: 2.75rem;
	}
}

.blockquote__max-width {
	max-width: 250px;
}

.listcheck-item {
	&-check {
		position: relative;
		width: 25px;
		min-width: 25px;
		height: 25px;
		&:before,
		&:after {
			content: '';
			background-color: currentColor;
			height: 6px;
			display: block;
			position: absolute;
			top: 0;
			right: 0;
			left: 0;
			bottom: 0;
			margin: auto;
		}
		&:before {
			width: 14px;
			transform: rotate(45deg) translate(0, 5px);
		}
		&:after {
			width: 20px;
			transform: rotate(-45deg) translate(4px, 4px);
		}
	}
}

.nima-bg {
	background-image: url('../img/nima-bg.svg');
	background-position: center;
	background-size: contain;
	background-repeat: no-repeat;
}

.arrow-container {
	width: 100%;
	height: 1px;
	border-top: 3px solid currentColor;
	position: relative;
	&__item {
		position: absolute;
		background-color: currentColor;
		width: 13px;
		height: 3px;
		right: -4px;
		&:first-child {
			transform: rotate(45deg);
			top: -7px;
		}
		&:last-child {
			transform: rotate(-45deg);
			top: 0;
		}
	}
	&-full {
		&:before {
			content: '';
			position: absolute;
			right: 100%;
			width: 100%;
			height: 1px;
			top: -3px;
			border-top: 3px solid currentColor;
		}
	}
	@media (max-width: 767px) {
		width: 2px;
		height: 100%;
		border-top: none;
		border-left: 3px solid currentColor;
		position: absolute;
		left: 2px;
		top: 0;
		&__item {
			&:first-child {
				bottom: 3px;
				top: auto;
				left: -12px;
			}
			&:last-child {
				bottom: 3px;
				top: auto;
				right: -8px;
			}
		}
		&:before {
			display: none;
		}
	}
}

.animated_img {
	animation: spinArrows 40s ease infinite normal both;
	z-index: 1;
}

.animated__text {
	position: absolute;
	z-index: 2;
	line-height: 1;
	&-0 {
		top: 7%;
		left: 9%;
	}
	&-1 {
		top: 7%;
		left: 63%;
	}
	&-2 {
		top: 48%;
		right: -7%;
	}
	&-3 {
		bottom: 0;
		right: 17%;
	}
	&-4 {
		bottom: 4%;
		left: 10%;
	}
	&-5 {
		left: -4%;
		top: 48%;
	}
}

@keyframes spinArrows {
	0% {
		transform: rotate(0);
	}
	10% {
		transform: rotate(-10deg);
	}
	40% {
		transform: rotate(180deg);
	}
	50% {
		transform: rotate(170deg);
	}
	100% {
		transform: rotate(360deg);
	}
}

.tab-carousel {
	.tab {
		&__item {
			&-active {
				border-bottom-color: transparent;
				color: $red;
			}
		}
	}
}

.collapse {
	height: 0;
	overflow: hidden;
	&.active {
		height: initial;
		overflow: auto;
	}
}

.test-block-mobile {
	min-height: 370px;
	margin-bottom: 20px;
}

.list-dream-job {
	&__item {
		color: $indigo;
		position: relative;
		padding-left: 40px;
		padding-bottom: 23px;
		&-custom {
			@media (max-width: 767px) {
				position: relative;
				padding-left: 40px;
				&:before {
					content: '';
					width: 18px;
					height: 18px;
					background-color: $red;
					border: 2px solid $indigo;
					position: absolute;
					left: 0;
					bottom: 2px;
					border-radius: 100%;
					z-index: 2;
				}
				&:after {
					content: '';
					width: 1px;
					height: calc(100% + 15px);
					border-left: 3px solid $red;
					position: absolute;
					left: 8px;
					bottom: 2px;
					z-index: 1;
				}
			}
		}
		&:before {
			content: '';
			width: 18px;
			height: 18px;
			background-color: $indigo;
			position: absolute;
			left: 0;
			top: 0;
			border-radius: 100%;
			z-index: 2;
		}
		&:after {
			content: '';
			width: 1px;
			height: calc(100% + 15px);
			border-left: 3px solid $indigo;
			position: absolute;
			left: 8px;
			top: 0;
			z-index: 1;
		}
		&:first-child,
		&:last-child {
			color: $red;
		}
		&:last-child {
			&:after {
				height: 100%;
				@media (max-width: 767px) {
					border-left-color: $red;
				}
			}
		}
	}
}

.modal {
	background-color: $white;
	overflow: scroll;
	max-height: 100%;
	-ms-overflow-style: none;
	scrollbar-width: none;
	::-webkit-scrollbar {
		display: none;
	}
	&__xl {
		max-width: 955px;
		margin: 0 auto;
	}
	&__body {
		position: relative;
	}
	&__close {
		position: absolute;
		right: 15px;
		top: 15px;
		width: 24px;
		height: 24px;
		cursor: pointer;
		&:before,
		&:after {
			content: '';
			width: 100%;
			height: 2px;
			position: absolute;
			left: 0;
			right: 0;
			top: 0;
			bottom: 0;
			margin: auto;
			background-color: $indigo;
			transition: 0.3s ease;
		}
		&:before {
			transform: rotate(45deg);
		}
		&:after {
			transform: rotate(-45deg);
		}
		&:hover {
			&:before,
			&:after {
				background-color: $purple;
			}
		}
	}
	&__bg {
		position: fixed;
		top: 0;
		left: 0;
		background-color: rgba(0, 0, 0, 0.6);
		width: 100%;
		height: 100%;
		transition: 0.3s ease all;
		z-index: -1;
		opacity: 0;
		display: flex;
		align-items: center;
		&.open {
			z-index: 100;
			opacity: 1;
		}
	}
}

.bg-indigo-dark .text-revert-bg {
	color: $white;
}

.user-card {
	color: $indigo;
	.user-card__link {
		&:hover {
			background-color: $indigo;
			color: $white;
		}
	}
}

.bg-indigo .user-card {
	color: $white;
	.user-card__link {
		&:hover {
			background-color: $white;
			color: $indigo;
		}
	}
}

[data-facebook-modal='false'],
[data-vk-modal='false'],
[data-instagram-modal='false'] {
	display: none;
}

.installment-block {
	input:disabled {
		border-color: aliceblue;
	}
	button:disabled {
		background-color: aliceblue !important;
		color: $blue-gray;
		cursor: default;
	}
}

.counter_item {
	counter-reset: section;
}
.counter_item__block {
	display: flex;
	align-items: center;
	&:before {
		counter-increment: section;
		content: counter(section);
		width: 30px;
		min-width: 30px;
		height: 30px;
		border-radius: 100%;
		background-color: $red;
		font-weight: 800;
		font-size: 14px;
		line-height: 1;
		display: flex;
		align-items: center;
		justify-content: center;
		color: $white;
	}
}

.animate-bounce-custom {
	animation: bouceCustom 1s linear infinite;
	&__link {
		&:hover {
			.animate-bounce-custom {
				animation-play-state: paused;
			}
		}
	}
}

@keyframes bouceCustom {
	0% {
		transform: translateY(0);
	}
	50% {
		transform: translateY(-5px);
	}
	100% {
		transform: translateY(0);
	}
}

.installment {
	margin: 0 -10px;
	@media (max-width: 767px) {
		margin: 0;
	}
	&__item {
		position: relative;
		padding-right: 20px;
		margin: 0 10px;
		&:last-child {
			padding-right: 0;
			&:before,
			&:after {
				opacity: 0;
			}
		}
		&:before,
		&:after {
			content: '';
			right: 0;
			top: 0;
			bottom: 0;
			margin: auto;
			background-color: $red;
			width: 10px;
			height: 3px;
			position: absolute;
		}
		&:before {
			transform: rotate(45deg);
			top: -10px;
		}
		&:after {
			transform: rotate(-45deg);
		}
		@media (max-width: 767px) {
			margin: 10px 0;
			padding-right: 0;
			padding-left: 20px;
			&:before,
			&:after {
				right: auto;
				left: 0;
			}
			&:last-child {
				&:before,
				&:after {
					opacity: 1;
				}
			}
		}
	}
}

.main-title-card {
	@media (max-width: 340px) {
		width: 100%;
	}
}

